tests/control/for_not_range.esl
// error: "test" is not an iterable type

func main() {
    for (let i of "test") {
        print("{}", i);
    }
}
